--- a/docker/test/style/Dockerfile
+++ b/docker/test/style/Dockerfile
@@ -30,6 +30,7 @@ RUN pip3 install \
         mypy==1.8.0 \
         pylint==3.1.0 \
         python-magic==0.4.24 \
+        flake8==4.0.1 \
         requests \
         thefuzz \
         types-requests \
