Initial support for loongarch64
Make ClickHouse compilable and runnable on loongarch64

So far only basic functionality was tested (on real hw),
clickhouse server runs, exceptions works, client works,
simple tests works.

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -240,11 +240,21 @@ jobs:
       data: ${{ needs.RunConfig.outputs.data }}
       checkout_depth: 0
   BuilderBinS390X:
+  # disabled because s390x refused to build in the migration to OpenSSL
+  # BuilderBinS390X:
+  #   needs: [RunConfig, BuilderDebRelease]
+  #   if: ${{ !failure() && !cancelled() }}
+  #   uses: ./.github/workflows/reusable_build.yml
+  #   with:
+  #     build_name: binary_s390x
+  #     data: ${{ needs.RunConfig.outputs.data }}
+  #     checkout_depth: 0
+  BuilderBinLOONGARCH64:
     needs: [RunConfig, BuilderDebRelease]
     if: ${{ !failure() && !cancelled() }}
     uses: ./.github/workflows/reusable_build.yml
     with:
-      build_name: binary_s390x
+      build_name: binary_loongarch64
       data: ${{ needs.RunConfig.outputs.data }}
       checkout_depth: 0
 ############################################################################################
