--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -585,11 +585,11 @@ if (TARGET ch_contrib::ulid)
     dbms_target_link_libraries (PUBLIC ch_contrib::ulid)
 endif()
 
-if (TARGET ch_contrib::libpg_query)
-    dbms_target_link_libraries (PUBLIC ch_contrib::libpg_query)
-else()
-    message(WARNING "ch_contrib::libpg_query not found")
-endif()
+# if (TARGET ch_contrib::libpg_query)
+#     dbms_target_link_libraries (PUBLIC ch_contrib::libpg_query)
+# else()
+#     message(WARNING "ch_contrib::libpg_query not found")
+# endif()
 
 if (TARGET ch_contrib::bzip2)
     target_link_libraries (clickhouse_common_io PRIVATE ch_contrib::bzip2)
