--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -20,14 +20,8 @@ jobs:
     outputs:
       data: ${{ steps.runconfig.outputs.CI_DATA }}
     steps:
-      - name: GH event json
-        run: |
-          echo "::group::GH Env"
-          env | grep GITHUB ||:
-          echo "::endgroup::"
-          echo "::group::Event Json"
-          cat "$GITHUB_EVENT_PATH" ||:
-          echo "::endgroup::"
+      - name: DebugInfo
+        uses: hmarr/debug-action@f7318c783045ac39ed9bb497e22ce835fdafbfe6
       - name: Check out repository code
         uses: ClickHouse/checkout@v1
         with:
