--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -388,7 +388,7 @@ if (TARGET ch_contrib::rdkafka)
 endif()
 
 if (TARGET ch_contrib::pulsar)
-    dbms_target_link_libraries(PUBLIC ch_contrib::pulsar)
+    dbms_target_link_libraries(PRIVATE ch_contrib::pulsar)
 endif()
 
 if (TARGET ch_contrib::nats_io)
