Examples->grouped TestData

--- a/src/Parsers/CMakeLists.txt
+++ b/src/Parsers/CMakeLists.txt
@@ -9,6 +9,7 @@ add_headers_and_sources(clickhouse_parsers ./Access)
 add_headers_and_sources(clickhouse_parsers ./MySQL)
 add_headers_and_sources(clickhouse_parsers ./Kusto)
 
+add_headers_and_sources(clickhouse_parsers ./PostgreSQL/test/TestData)
 add_headers_and_sources(clickhouse_parsers ./PostgreSQL/Common)
 add_headers_and_sources(clickhouse_parsers ./PostgreSQL/Common/util)
 add_headers_and_sources(clickhouse_parsers ./PostgreSQL/Values)
