URI as engine parameter

--- a/contrib/mongo-cxx-driver-cmake/CMakeLists.txt
+++ b/contrib/mongo-cxx-driver-cmake/CMakeLists.txt
@@ -155,6 +155,11 @@ set(MONGOCXX_SOURCES
 )
 set(MONGOCXX_COMPILER_VERSION "${CMAKE_CXX_COMPILER_VERSION}")
 set(MONGOCXX_COMPILER_ID "${CMAKE_CXX_COMPILER_ID}")
+set(MONGOCXX_LINK_WITH_STATIC_MONGOC 1)
+set(MONGOCXX_BUILD_STATIC 1)
+if (ENABLE_OPENSSL OR ENABLE_OPENSSL_DYNAMIC)
+    set(MONGOCXX_ENABLE_SSL 1)
+endif ()
 
 configure_file(
         ${MONGOCXX_SOURCES_DIR}/lib/mongocxx/v_noabi/mongocxx/config/config.hpp.in
