--- a/.gitmodules
+++ b/.gitmodules
@@ -372,3 +372,6 @@
 [submodule "contrib/double-conversion"]
 	path = contrib/double-conversion
 	url = https://github.com/ClickHouse/double-conversion.git
+[submodule "contrib/libpg_query"]
+	path = contrib/libpg_query
+	url = https://github.com/seshWCS/libpg_query.git
