add Create + refactor

--- a/src/Parsers/CMakeLists.txt
+++ b/src/Parsers/CMakeLists.txt
@@ -15,6 +15,7 @@ add_headers_and_sources(clickhouse_parsers ./PostgreSQL/Common/util)
 add_headers_and_sources(clickhouse_parsers ./PostgreSQL/Values)
 add_headers_and_sources(clickhouse_parsers ./PostgreSQL/Targets)
 add_headers_and_sources(clickhouse_parsers ./PostgreSQL/Statements)
+add_headers_and_sources(clickhouse_parsers ./PostgreSQL/Columns)
 add_headers_and_sources(clickhouse_parsers ./PostgreSQL)
 
 add_headers_and_sources(clickhouse_parsers ./PRQL)
